--- a/resources/views/partials/dashfooter.edge
+++ b/resources/views/partials/dashfooter.edge
@@ -52,6 +52,7 @@
 <script src="/light/plugins/table/datatable/custom_miscellaneous.js"></script>
 <script src="/light/plugins/countdown/jquery.countdown.min.js"></script>
 <script src="/light/plugins/blockui/jquery.blockUI.min.js"></script>
+<script src="/light/plugins/file-upload/file-upload-with-preview.min.js"></script>
 
 <script src="/light/plugins/blockui/custom-blockui.js"></script>
 
