--- a/resources/views/partials/dashheader.edge
+++ b/resources/views/partials/dashheader.edge
@@ -51,6 +51,11 @@
   <link rel="stylesheet" href="/light/styles/bootstrap-rating.css">
   <link rel="stylesheet" href="/icons/css/all.css">
   <link href="/light/plugins/file-upload/file-upload-with-preview.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="/light/plugins/table/datatable/datatables.css">
+  <link rel="stylesheet" type="text/css" href="/light/plugins/table/datatable/custom_dt_miscellaneous.css">
+  <link rel="stylesheet" type="text/css" href="/light/styles/forms/theme-checkbox-radio.css">
+  <link rel="stylesheet" type="text/css" href="/light/plugins/table/datatable/dt-global_style.css">
+
 
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 
@@ -320,6 +325,16 @@
         </li>
 
         <li class="menu">
+          <a href="/withdraw" aria-expanded="false" class="dropdown-toggle">
+            <div class="">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-send"><line x1="22" y1="2" x2="11" y2="13"/><polygon points="22 2 15 22 11 13 2 9 22 2"/></svg>
+              <span>Withdraw</span>
+            </div>
+          </a>
+        </li>
+<!--referral coming soon-->
+        <!--
+        <li class="menu">
           <a href="/referral" aria-expanded="false" class="dropdown-toggle">
             <div class="">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
@@ -327,6 +342,7 @@
             </div>
           </a>
         </li>
+        -->
       </ul>
       <!-- <div class="shadow-bottom"></div> -->
 
