--- a/resources/views/dashboard/profile.edge
+++ b/resources/views/dashboard/profile.edge
@@ -1,4 +1,5 @@
 @include('partials/dashheader')
+<link rel="stylesheet" href="/light/styles/components/custom-counter.css"  type="text/css">
 <!--  BEGIN CONTENT AREA  -->
 <div id="content" class="main-content">
   <div class="layout-px-spacing">
@@ -10,49 +11,28 @@
           <div class="widget-content widget-content-area">
             <div class="d-flex justify-content-between">
               <h3 class="">Profile</h3>
-              <a href="user_account_setting.html" class="mt-2 edit-profile"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg></a>
+              <a href="/settings" class="mt-2 edit-profile"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-3"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg></a>
             </div>
             <div class="text-center user-info">
+              @if(file)
+              <img src="data:image/png;base64,{{file}}" alt="avatar" width="90" height="90">
+              @else
               <img src="/images/chat.png" alt="avatar" width="90" height="90">
-              <p class="">{{fullname}}</p>
+              @endif
+              <p class="">{{user.username}}</p>
             </div>
             <div class="user-info-list">
 
               <div class="">
                 <ul class="contacts-block list-unstyled">
                   <li class="contacts-block__item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-coffee"><path d="M18 8h1a4 4 0 0 1 0 8h-1"></path><path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"></path><line x1="6" y1="1" x2="6" y2="4"></line><line x1="10" y1="1" x2="10" y2="4"></line><line x1="14" y1="1" x2="14" y2="4"></line></svg> Web Developer
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>{{moment(user.created_at).format("DD MMMM y hh:mm a")}}
                   </li>
                   <li class="contacts-block__item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>Jan 20, 1989
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-map-pin"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>{{user.country}}
                   </li>
                   <li class="contacts-block__item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-map-pin"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>{{country}}
-                  </li>
-                  <li class="contacts-block__item">
-                    <a href="mailto:example@mail.com"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>{{email}}</a>
-                  </li>
-                  <li class="contacts-block__item">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg> +1 (530) 555-12121
-                  </li>
-                  <li class="contacts-block__item">
-                    <ul class="list-inline">
-                      <li class="list-inline-item">
-                        <div class="social-icon">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
-                        </div>
-                      </li>
-                      <li class="list-inline-item">
-                        <div class="social-icon">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter"><path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path></svg>
-                        </div>
-                      </li>
-                      <li class="list-inline-item">
-                        <div class="social-icon">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-                        </div>
-                      </li>
-                    </ul>
+                    <a href="mailto:{{user.email}}"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>{{user.email}}</a>
                   </li>
                 </ul>
               </div>
@@ -66,7 +46,7 @@
             <div class="timeline-alter">
               <div class="item-timeline timeline-dark">
                 <div class="t-meta-date">
-                  <p class="">04 Mar 2009</p>
+                  <p class="">{{moment(user.created_at).format("DD MMMM y")}}</p>
                 </div>
                 <div class="t-dot">
                 </div>
@@ -76,7 +56,7 @@
               </div>
               <div class="item-timeline">
                 <div class="t-meta-date">
-                  <p class="">25 Apr 2014</p>
+                  <p class="">{{total.length}}</p>
                 </div>
                 <div class="t-dot">
                 </div>
@@ -84,20 +64,10 @@
                   <p>Trades</p>
                 </div>
               </div>
-              <div class="item-timeline">
-                <div class="t-meta-date">
-                  <p class="">04 Apr 2018</p>
-                </div>
-                <div class="t-dot">
-                </div>
-                <div class="t-text">
-                  <p>Last seen</p>
-                </div>
-              </div>
 
               <div class="item-timeline">
                 <div class="t-meta-date">
-                  <p class="">04 Apr 2018</p>
+                  <p class="">{{offers.length}}</p>
                 </div>
                 <div class="t-dot">
                 </div>
@@ -114,21 +84,54 @@
 
       <div class="col-xl-8 col-lg-6 col-md-7 col-sm-12 layout-top-spacing">
 
-        <div class="skills layout-spacing ">
+        <div class="layout-spacing">
           <div class="widget-content widget-content-area">
             <h3 class="">Trades</h3>
-            <div class="progress br-30">
-              <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>successful</span> <span>25%</span> </div></div>
+            <div class="icon--counter-container">
+
+            <div class="counter-container">
+
+              <div class="counter-content text-center">
+                <h1 class="ico-counter1 ico-counter">{{success.length}}</h1>
+              </div>
+
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-check-circle"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/><polyline points="22 4 12 14.01 9 11.01"/></svg>
+
+              <p class="ico-counter-text">Successful</p>
             </div>
-            <div class="progress br-30">
-              <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>pending</span> <span>50%</span> </div></div>
+
+            <div class="counter-container">
+
+              <div class="counter-content text-center">
+                <h1 class="ico-counter2 ico-counter">{{pending.length}}</h1>
+              </div>
+
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-clock"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
+
+              <p class="ico-counter-text">Pending</p>
             </div>
-            <div class="progress br-30">
-              <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>cancelled</span> <span>70%</span> </div></div>
+
+            <div class="counter-container">
+              <div class="counter-content text-center">
+                <h1 class="ico-counter3 ico-counter">{{disputed.length}}</h1>
+              </div>
+
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-triangle"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"/><line x1="12" y1="9" x2="12" y2="13"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
+
+              <p class="ico-counter-text">Disputed</p>
             </div>
-            <div class="progress br-30">
-              <div class="progress-bar bg-warning" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><div class="progress-title"><span>disputed</span> <span>60%</span> </div></div>
-            </div>
+
+              <div class="counter-container">
+                <div class="counter-content text-center">
+                  <h1 class="ico-counter4 ico-counter">{{cancelled.length}}</h1>
+                </div>
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-circle"><circle cx="12" cy="12" r="10"/><line x1="15" y1="9" x2="9" y2="15"/><line x1="9" y1="9" x2="15" y2="15"/></svg>
+
+                <p class="ico-counter-text">Cancelled</p>
+              </div>
+
+          </div>
 
           </div>
         </div>
@@ -136,10 +139,11 @@
         <div class="bio layout-spacing ">
           <div class="widget-content widget-content-area">
             <h3 class="">Bio</h3>
-            <p>I'm Web Developer from California. I code and design websites worldwide. Mauris varius tellus vitae tristique sagittis. Sed aliquet, est nec auctor aliquet, orci ex vestibulum ex, non pharetra lacus erat ac nulla.</p>
-
-            <p>Sed vulputate, ligula eget mollis auctor, lectus elit feugiat urna, eget euismod turpis lectus sed ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nunc ut velit finibus, scelerisque sapien vitae, pharetra est. Nunc accumsan ligula vehicula scelerisque vulputate.</p>
-
+            @if(user.bio)
+            <p>{{user.bio}}</p>
+            @else
+            <p>None</p>
+            @endif
 
           </div>
         </div>
@@ -156,4 +160,6 @@
   </div>
 
   @include('partials/dashfooter')
+  <script src="/light/plugins/counter/jquery.countTo.js"></script>
+  <script src="/js/components/custom-counter.js"></script>
 </div>
