--- a/resources/views/dashboard/settings.edge
+++ b/resources/views/dashboard/settings.edge
@@ -118,10 +118,10 @@
                          {{ csrfField() }}
                          <div class="form-group m-3">
                            <label for="bio">Bio</label>
-                         <textarea class="form-control" rows="4" name="bio" id="bio"></textarea>
+                         <textarea class="form-control" rows="4" name="bio" id="bio">{{user.bio}}</textarea>
                          </div>
 
-                         <button class="btn btn-primary mb-3 ml-4"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-save"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></svg> Save</button>
+                         <button class="btn btn-primary mb-3 ml-4" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-save"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></svg> Save</button>
                        </form>
                      </div>
                    </div>
