rendered some parts of the dashboard

--- a/resources/views/admin/dashboard.edge
+++ b/resources/views/admin/dashboard.edge
@@ -1,13 +1,147 @@
 @include('partials/adminheader')
+<link href="/light/styles/components/custom-list-group.css" rel="stylesheet" type="text/css">
 <!--  BEGIN CONTENT AREA  -->
 <div id="content" class="main-content">
   <div class="layout-px-spacing">
+    <div class="row layout-top-spacing">
+        <div class="col-lg">
+          <div class="widget bg-info text-center">
+            <div class="widget-header">
+              <h5>Users</h5>
+            </div>
+            <div class="widget-content">
+              <h1>100</h1>
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+            </div>
+          </div>
+        </div>
+
+      <div class="col-lg mt-3 mt-sm-0">
+        <div class="widget bg-success text-center">
+          <div class="widget-header">
+            <h5>Offers</h5>
+          </div>
+
+          <div class="widget-content">
+            <h1>20</h1>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-briefcase"><rect x="2" y="7" width="20" height="14" rx="2" ry="2"/><path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"/></svg>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="row layout-top-spacing">
+      <div class="col-lg">
+        <div class="widget bg-warning text-center">
+          <div class="widget-header">
+            <h5>Trades</h5>
+          </div>
+
+          <div class="widget-content">
+            <h1>80</h1>
+
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-award"><circle cx="12" cy="8" r="7"/><polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"/></svg>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg mt-3 mt-sm-0">
+        <div class="widget bg-danger text-center">
+          <div class="widget-header">
+            <h5>Wallets</h5>
+          </div>
+          <div class="widget-content">
+            <h1>75</h1>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-bag"><path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"/><line x1="3" y1="6" x2="21" y2="6"/><path d="M16 10a4 4 0 0 1-8 0"/></svg>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row layout-top-spacing">
+      <div class="col-lg">
+        <div class="widget text-center">
+          <div class="widget-header">
+            <h5>Trades statistics</h5>
+          </div>
+
+          <div class="widget-content">
+            <div id="stats">
+
+            </div>
+            </div>
+        </div>
+      </div>
+
+      <div class="col-lg mt-3 mt-sm-0">
+        <div class="widget">
+          <div class="widget-header">
+            <h5>Error logs
+              <button class="btn btn-danger mb-2 mr-2 rounded-circle float-right"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash"><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></svg></button>
+            </h5>
+          </div>
+          <div class="widget-content">
+            <ul class="list-group list-group-icons-meta mt-2">
+              <li class="list-group-item list-group-item-action">
+                <div class="media">
+                  <div class="d-flex mr-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="12"/><line x1="12" y1="16" x2="12.01" y2="16"/></svg>
+                  </div>
+                  <div class="media-body">
+                    <h6 class="tx-inverse">Messages</h6>
+                    <p class="mg-b-0">4 New Messages</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
 
 
   @include('partials/adminfooter')
+  <script>
+    var radialChart = {
+      chart: {
+        height: 350,
+        type: 'radialBar',
+        toolbar: {
+          show: false,
+        }
+      },
+      plotOptions: {
+        radialBar: {
+          dataLabels: {
+            name: {
+              fontSize: '22px',
+            },
+            value: {
+              fontSize: '16px',
+            },
+            total: {
+              show: true,
+              label: 'Total',
+              formatter: function (w) {
+                // By default this function returns the average of all series. The below is just an example to show the use of custom formatter function
+                return 249
+              }
+            }
+          }
+        }
+      },
+      series: [44, 55, 67, 83],
+      labels: ['Apples', 'Oranges', 'Bananas', 'Berries'],
+    }
+
+    var chart = new ApexCharts(
+      document.querySelector("#stats"),
+      radialChart
+    );
+
+    chart.render();
+  </script>
 </div>
