--- a/resources/views/partials/adminfooter.edge
+++ b/resources/views/partials/adminfooter.edge
@@ -17,7 +17,7 @@
 <script src="/js/libs/jquery-3.1.1.min.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-<script src="/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+<script src="/light/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 <script src="/js/app.js"></script>
 <script>
   $(document).ready(function() {
@@ -25,15 +25,15 @@
   });
 </script>
 <script src="/js/custom.js"></script>
-<script src="/plugins/highlight/highlight.pack.js"></script>
+<script src="/light/plugins/highlight/highlight.pack.js"></script>
 <!-- END GLOBAL MANDATORY SCRIPTS -->
 
 <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
 <script src="/js/libs/jquery-play-sound.js"></script>
-<script src="/plugins/apex/apexcharts.min.js"></script>
+<script src="/light/plugins/apex/apexcharts.min.js"></script>
 <script src="/js/dashboard/dash_1.js"></script>
-<script src="/plugins/select2/select2.min.js"></script>
-<script src="/plugins/select2/custom-select2.js"></script>
+<script src="/light/plugins/select2/select2.min.js"></script>
+<script src="/light/plugins/select2/custom-select2.js"></script>
 <script src="/ratings/bootstrap-rating.js"></script>
 <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
 <script>$(".disabled-results").select2();</script>
@@ -44,19 +44,19 @@
   }
 });
 </script>
-<script src="/plugins/bootstrap-select/bootstrap-select.min.js"></script>
-<script src="/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
-<script src="/plugins/bootstrap-touchspin/custom-bootstrap-touchspin.js"></script>
-<script src="/plugins/notification/snackbar/snackbar.min.js"></script>
-<script src="/plugins/table/datatable/datatables.js"></script>
-<script src="/plugins/table/datatable/custom_miscellaneous.js"></script>
-<script src="/plugins/countdown/jquery.countdown.js"></script>
-<script src="/plugins/blockui/jquery.blockUI.min.js"></script>
+<script src="/light/plugins/bootstrap-select/bootstrap-select.min.js"></script>
+<script src="/light/plugins/bootstrap-touchspin/jquery.bootstrap-touchspin.min.js"></script>
+<script src="/light/plugins/bootstrap-touchspin/custom-bootstrap-touchspin.js"></script>
+<script src="/light/plugins/notification/snackbar/snackbar.min.js"></script>
+<script src="/light/plugins/table/datatable/datatables.js"></script>
+<script src="/light/plugins/table/datatable/custom_miscellaneous.js"></script>
+<script src="/light/plugins/countdown/jquery.countdown.js"></script>
+<script src="/light/plugins/blockui/jquery.blockUI.min.js"></script>
 
-<script src="/plugins/blockui/custom-blockui.js"></script>
+<script src="/light/plugins/blockui/custom-blockui.js"></script>
 
-<script src="/plugins/sweetalerts/sweetalert2.min.js"></script>
-<script src="/plugins/sweetalerts/custom-sweetalert.js"></script>
+<script src="/light/plugins/sweetalerts/sweetalert2.min.js"></script>
+<script src="/light/plugins/sweetalerts/custom-sweetalert.js"></script>
 <script>
   $("input[name='margin']").TouchSpin({
     postfix: '%',
