--- a/resources/views/partials/adminheader.edge
+++ b/resources/views/partials/adminheader.edge
@@ -253,7 +253,7 @@
           </a>
           <ul class="collapse submenu list-unstyled" id="app" data-parent="#accordionExample">
             <li>
-              <a href="/walletbtc">Manage users</a>
+              <a href="/manage_users">Manage users</a>
             </li>
           </ul>
         </li>
@@ -270,13 +270,7 @@
           </a>
           <ul class="collapse submenu list-unstyled" id="components" data-parent="#accordionExample">
             <li>
-              <a href="/buy_coin">Disputed </a>
-            </li>
-            <li>
-              <a href="/sell_coin"> successful  </a>
-            </li>
-            <li>
-              <a href="/create_offer"> pending </a>
+              <a href="/manage_trades">Disputed </a>
             </li>
           </ul>
         </li>
@@ -293,10 +287,7 @@
           </a>
           <ul class="collapse submenu list-unstyled" id="elements" data-parent="#accordionExample">
             <li>
-              <a href="/mytrades"> Mass alert </a>
-            </li>
-            <li>
-              <a href="/offers"> mass push notification </a>
+              <a href="/mass_alert"> Mass alert </a>
             </li>
           </ul>
         </li>
